# image-segmentation

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  analysis.txt  ed  edge.cu  gpu  inputMona.txt  inputSmall.txt  inputski.txt  mainGPUMult.cpp  mainGPUMult.cu  mainSeqMult.cpp  mainSeqMult.cu  mainSeqSing.cpp  maingpu  mainnvgraph.cpp  mona.pgm  nvGraphtry.cpp  nvGraphtry.cu  out.pgm  out.txt  outMona.pgm  outski.pgm  outskiseq.pgm  p2  run.py  seq  small.out  small.pgm  smallout.pgm  supercomp.pem  test
Aula24/: blured.pgm  ed  edge.cu  ex1  exdesv  exemplo-desvio.cu  exercicio1.cu  imagem.h  mona_edge.pgm  p2  parte2.cu
Relatorio/: Relatório projeto4.ipynb  edgebeijaflor.pgm  jump.pgm  outbeijaflorgpu.pgm  outjumpgpu.pgm  outtestegpu.pgm
Relatorio/.ipynb_checkpoints/: Relatório projeto4-checkpoint.ipynb
input files/: inputbeer.txt  inputcat.txt  inputjump.txt
input images/: jump.pgm
input images/Relatorio/: birdBB.pgm  edgejump.pgm  edgeteste.pgm
input images/Relatorio/.ipynb_checkpoints/: Relatório projeto4-checkpoint.ipynb
input_files/: inputBeijaFlor.txt  inputlemon.txt  inputteste.txt
input_images/: beer.pgm
output images/: edge.pgm  outbeijaflor.pgm
output_images/: outSki.pgm  outbeer.pgm  outjumpseq.pgm  outtestegpu.pgm  outtesteseq.pgm
